# NeuralNetwork

./: CMakeLists.txt
include/: NeuralNetwork.h
src/: NeuralNetwork.cpp
